added more stats excel helper file

--- a/Markdown/Analysis 2_Decision trees_plots.Rmd
+++ b/Markdown/Analysis 2_Decision trees_plots.Rmd
@@ -33,8 +33,8 @@ library(caret)
 ## Load data (only need to change this for the More task analysis)
 ```{r}
 # indicate the task name, make it easier for adopting the same code for both the N and M tasks
-task_name = "n"
-#task_name = "more"
+#task_name = "n"
+task_name = "more"
 
 # input files
 data_long = read.csv(here(paste0("Data/data_", task_name,"_long.csv")))
